deployments/wordpress/wordpress-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
    tier: frontend
  name: wordpress-svc
  namespace: wordpress-svc
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
