deployments/wordpress/wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: wordpress@sha256:INSERT_IMAGE_DIGEST_HERE
        name: wordpress
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true  # Use read-only filesystem
          runAsUser: 10001  # Use user ID above 10000
          capabilities:
            drop: ["ALL"]  # Minimize all containers with capabilities
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "100Mi"
        ports:
        - containerPort: 9000
          name: php-fpm
        readinessProbe:
          httpGet:
            path: /index.php
            port: php-fpm
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /index.php
            port: php-fpm
          initialDelaySeconds: 20
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
          readOnly: true  # Use read-only filesystem
        - name: service-account-token
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount  # Mount Service Account Token
          readOnly: true  # Use read-only filesystem
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
      - name: service-account-token
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-network-policy
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
